samples/_failures_safe/1761156615_382942_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fdd1924.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_3fdd1924.c:157:9: error: expected declaration or statement at end of input
  157 |         case TOKEN_IDENTIFIER:
      |         ^~~~
./samples/SAFE/__tmp_3fdd1924.c:157:9: error: expected declaration or statement at end of input
